# ai-agent

./: .env-example  .gitignore  README.md  gpt_api_test.py  pyproject.toml
openai-test/: README.md  gpt_api_test.py  pyproject.toml
prompt-engineering/: README.md  joker.py  mirror.py
